[metadata]
name = onaptests_bench
version = 0.1
description = Addon to run simultaenously several pyhtonsdk_tests basic_* tests
author = Orange OpenSource
license = Apache 2.0
classifiers =
  Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src

[entry_points]
console_scripts =
    run_stability_tests = onaptests_bench.launcher:main
